objects/User.object
<CustomObject>
    <fields>
        <fullName>CN_Is_Finance__c</fullName>
        <formula>$Profile.Name = &quot;CN CFO&quot; ||  $Profile.Name = &quot;CN Finance AR&quot; || $Profile.Name = &quot;CN Finance Controlling&quot; || $Profile.Name = &quot;CN Finance MDM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Integration_User__c</fullName>
        <formula>Profile.Name = &apos;System Integration&apos; || Profile.Name = &apos;System Administrator&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Me__c</fullName>
        <formula>Id =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Team_Member__c</fullName>
        <formula>IF( 
	OR(
		$User.Id = ManagerId ,
		$User.Id = Manager.ManagerId ,
		$User.Id = Manager.Manager.ManagerId,
		$User.Id = Manager.Manager.Manager.ManagerId,
		$User.Id = Manager.Manager.Manager.Manager.ManagerId
	),
	IF(
		OR(
		     $User.Title =&apos;Sales Rep&apos;,
			$User.Title=&apos;Manager&apos;,
			$User.Title=&apos;Assistant Regional Manager&apos;,
			$User.Title=&apos;Regional Manager&apos;,
			$User.Title=&apos;Channel Manager&apos;,
			$User.Title=&apos;Commerical Director&apos;,
                        $User.Title=&apos;CEO&apos;), 
		True, 
		False
	), 
	False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Sales__c</fullName>
        <formula>Profile.Name = &quot;CN Sales&quot; ||  Profile.Name = &quot;CN Sales Lead&quot; || Profile.Name = &quot;CN Sales Manager&quot; || Profile.Name = &quot;CN CEO&quot; || Profile.Name = &quot;CN Sales MDM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team_For_Report__c</fullName>
        <label>Sales Team For Report</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team__c</fullName>
        <label>Sales Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_User_Personnel_Number__c</fullName>
        <externalId>true</externalId>
        <label>Personnel Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CN_Check_PersonnelNumber_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(
       Profile.Name = &apos;CN Sales&apos;,
       Profile.Name = &apos;CN Sales Lead&apos;,
       Profile.Name = &apos;CN Sales Manager&apos;,
       Profile.Name = &apos;CN Sales MDM&apos;,
       Profile.Name = &apos;CN Finance AR&apos;,
       Profile.Name = &apos;CN Finance MDM&apos;,
       Profile.Name = &apos;CN CFO&apos;
  ),
  ISBLANK(CN_User_Personnel_Number__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_User_Personnel_Number__c</errorDisplayField>
        <errorMessage>Personnel number cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Change_Title</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Administrator&quot;, TRUE, FALSE)),
OR(
Profile.Name = &apos;CN Sales&apos;,
Profile.Name = &apos;CN Sales Lead&apos;,
Profile.Name = &apos;CN Sales Manager&apos;,
Profile.Name = &apos;CN Sales MDM&apos;,
Profile.Name = &apos;CN Finance AR&apos;,
Profile.Name = &apos;CN Finance MDM&apos;,
Profile.Name = &apos;CN CFO&apos;
),
ISCHANGED( Title ) 
)</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>Only System Admin could change the title</errorMessage>
    </validationRules>
</CustomObject>